Update dependencies and fully setup POM
This makes the skeleton GUI from previous commit executable in the
given source. Adds module-info for new jdks and fixes export issues
with jfoenix.

This commit also adds unused dependency of joinery and switches from
maven central to JCenter. Hopefully these will be used in future commits

TODO: Implement core logic and preference saving mechanisms